# TFM

./: CHANGELOG.md  TFM.cabal  cabal.project
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.2/: ComponentsForGloss-1.0.0.0-inplace.conf  package.cache
